# chip8-vm

./: .gitignore  CMakeLists.txt  README.md  main.c
docs/: chip8vm.js  chip8vm.wasm  index.html  index.js  style.css
include/: opcodes.h  rom.h  types.h  vm.h
src/: opcodes.c  rom.c  vm.c
web/: chip8vm.wasm  style.css
